src/objects/KaiserJuneToSept__c.object
<CustomObject>
    <fields>
        <fullName>CRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>Member__r.Coordinator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Member__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Member__r.Division_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Member__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <formula>Member__r.FID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Member__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Member__r.Full_Name_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <formula>Member__r.MemberID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KaiserJuneToSept</relationshipLabel>
        <relationshipName>KaiserJuneToSept</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <formula>Member__r.Organizer_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Petition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Dir__c</fullName>
        <formula>Member__r.Regional_Director__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reg Dir</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Member__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turn_Out_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Turn Out By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KaiserJuneToSept (Turn Out By)</relationshipLabel>
        <relationshipName>KaiserJuneToSept1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Worksite__c</fullName>
        <formula>Member__r.Worksite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worksite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X80_Leader__c</fullName>
        <formula>Member__r.Stretch_Leader__r.FirstName  &amp; &quot; &quot;  &amp;  Member__r.Stretch_Leader__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>80% Leader</label>
        <type>Text</type>
    </fields>
    <label>KaiserJuneToSept</label>
    <listViews>
        <fullName>KAISER_1950_FRANKLIN</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-1950 FRANKLIN</value>
        </filters>
        <label>KAISER-1950 FRANKLIN</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_ALAMEDA_MEDICAL_OFFICE_BLDG</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-ALAMEDA MEDICAL OFFICE BLDG</value>
        </filters>
        <label>KAISER-ALAMEDA MEDICAL OFFICE BLDG</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_ANTELOPE_VALLEY</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-ANTELOPE VALLEY</value>
        </filters>
        <label>KAISER-ANTELOPE VALLEY</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_ANTIOCH</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-ANTIOCH</value>
        </filters>
        <label>KAISER-ANTIOCH</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_BAKERSFIELD</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-BAKERSFIELD</value>
        </filters>
        <label>KAISER-BAKERSFIELD</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_BALDWIN_PARK</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-BALDWIN PARK</value>
        </filters>
        <label>KAISER-BALDWIN PARK</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_BERKELEY_LAB</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-BERKELEY LAB</value>
        </filters>
        <label>KAISER-BERKELEY LAB</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_CAMPBELL</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-CAMPBELL</value>
        </filters>
        <label>KAISER-CAMPBELL</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_DAVIS</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-DAVIS</value>
        </filters>
        <label>KAISER-DAVIS</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_DOWNEY_CLINIC</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-DOWNEY CLINIC</value>
        </filters>
        <label>KAISER-DOWNEY CLINIC</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_DOWNEY_HOSPITAL</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-DOWNEY HOSPITAL</value>
        </filters>
        <label>KAISER-DOWNEY HOSPITAL</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_FAIRFIELD</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-FAIRFIELD</value>
        </filters>
        <label>KAISER-FAIRFIELD</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_FOLSOM</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-FOLSOM</value>
        </filters>
        <label>KAISER-FOLSOM</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_FREMONT</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>X80_Leader__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-FREMONT</value>
        </filters>
        <label>KAISER-FREMONT</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KAISER_FRENCH_CAMPUS</fullName>
        <columns>Full_Name__c</columns>
        <columns>CRE__c</columns>
        <columns>Petition__c</columns>
        <columns>Employer__c</columns>
        <columns>Department__c</columns>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>KAISER-FRENCH CAMPUS</value>
        </filters>
        <label>KAISER-FRENCH CAMPUS</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
            <group>Kaiser_Division</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>KaiserJuneToSept Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KaiserJuneToSept</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>